<resources>
    <string name="app_name">MvvmTrial</string>

    <!--Auth Activity Strings-->
    <string name="log_in">Log In</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="confirm_password">confirm password</string>
    <string name="enter_username">enter username</string>
    <string name="sign_up">Sign Up</string>


</resources>