<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".ui.auth.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/officialDarkGreen"/>

        <EditText
            android:id="@+id/username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/enter_username"
            android:layout_marginBottom="12dp"
            android:textColor="@color/officialWhite"
            android:autofillHints=""
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/enter_email"
            android:layout_marginBottom="12dp"
            android:textColor="@color/officialWhite"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/enter_password"
            android:layout_marginBottom="18dp"
            android:textColor="@color/officialWhite"
            android:autofillHints=""
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/confirm_password"
            android:layout_marginBottom="18dp"
            android:textColor="@color/officialWhite"
            android:autofillHints=""
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/officialDarkGreen"
            android:backgroundTint="@color/OfficialYellow"/>

    </LinearLayout>

</RelativeLayout>