<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        tools:context=".ui.auth.LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="24sp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/officialDarkGreen"/>

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:hint="@string/enter_email"
                android:layout_marginBottom="12dp"
                android:textColor="@color/officialWhite"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:hint="@string/enter_password"
                android:layout_marginBottom="18dp"
                android:textColor="@color/officialWhite"
                android:autofillHints=""
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/officialDarkGreen"
                android:backgroundTint="@color/OfficialYellow"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>